Got the formatting done for the first page

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 
 <body>
 
-
-
-    <section class="header">
+    <!-- the top layer of the website -->
+    <div class="header">
 
       <div class="left-logo-area"> 
 
       </div>
 
       <div class="main-logo">
-          Steven Parramore
+          <div class="main-logo-text">Steven Parramore</div>
       </div>  
 
       <div class="right-logo-area">
@@ -26,21 +25,45 @@
       </div>
 
       <div class="about-link">
-          About
+          <div class="about-link-text">About</div>
       </div>
 
       <div class="portfolio">
-          Portfolio
+          <div class="portfolio-text">Portfolio</div>
       </div>
 
       <div class="contact">
-          Contact
+          <div class="contact-text">Contact</div>
       </div>
 
       <div class="contact-right">
-        
+
       </div>
 
-    </section>
+    </div>
+
+
+    <!-- the description portion of the website -->
+    <div class="main-header">
+        <div class="main-header-header">
+            <div class="main-header-header-text"> About Me </div>
+        </div>
+
+        <div class="main-body">
+            <div id="main-body-top-border"> </div>
+            <div id="main-body-left-border"></div>
+            
+            <div class="main-body-image">
+                <img src="images/maxresdefault.jpg" alt:"Me!" class="profile-picture"></img>
+            </div>
+
+
+            <div class="main-text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+            </div>
+
+        </div>
+
+    </div>
 
 </body>
