Formatting almost done with the About page. Added links and put the header into each, need to find a way to make only one copy

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Basic Portfolio</title>
+  <!-- <link rel="stylesheet" type="text/css" href="assets/reset.css"> -->
   <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 
@@ -12,53 +13,60 @@
     <!-- the top layer of the website -->
     <div class="header">
 
-      <div class="left-logo-area"> 
+            <div class="left-logo-area"> 
 
-      </div>
+            </div>
 
-      <div class="main-logo">
-          <div class="main-logo-text">Steven Parramore</div>
-      </div>  
+        <div id="main-logo">
+            <div id="main-logo-text">Steven Parramore</div>
+        </div>  
 
-      <div class="right-logo-area">
+        <div id="right-logo-area"></div>
 
-      </div>
+        <div id="header-link-area">
 
-      <div class="about-link">
-          <div class="about-link-text">About</div>
-      </div>
+            <!-- <div id="about-link">
+                <div id="about-link-text">
+                    <a href="index.html">About</a> 
+                </div>
+            </div>
 
-      <div class="portfolio">
-          <div class="portfolio-text">Portfolio</div>
-      </div>
+            <div id="portfolio">
+                <div id="portfolio-text">
+                    <a href="portfolio.html">Portfolio</a> 
+                </div>
+            </div>
 
-      <div class="contact">
-          <div class="contact-text">Contact</div>
-      </div>
+            <div id="contact">
+                <div id="contact-text">
+                    <a href="contact.html">Contact</a> 
+                </div>
+            </div>
 
-      <div class="contact-right">
+            <div id="contact-right"></div> -->
 
-      </div>
+        </div>
 
     </div>
 
 
     <!-- the description portion of the website -->
-    <div class="main-header">
-        <div class="main-header-header">
-            <div class="main-header-header-text"> About Me </div>
+    <div id="main-body">
+        <div id="main-body-header">
+            <div id="main-body-header-text-left-border"></div>
+            <div id="main-body-header-text"> About Me </div>
         </div>
 
-        <div class="main-body">
+        <div id="main-body-body">
             <div id="main-body-top-border"> </div>
             <div id="main-body-left-border"></div>
             
-            <div class="main-body-image">
-                <img src="images/maxresdefault.jpg" alt:"Me!" class="profile-picture"></img>
+            <div id="main-body-image">
+                <img src="images/maxresdefault.jpg" alt:"Me!" id="profile-picture"></img>
             </div>
 
 
-            <div class="main-text">
+            <div id="main-text">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
             </div>
 
