The index.html was not uploaded

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <div id="right-logo-area"></div>
 
-        <div id="header-link-area">
+        <!-- <div id="header-link-area"> -->
 
-            <!-- <div id="about-link">
+            <div id="about-link">
                 <div id="about-link-text">
                     <a href="index.html">About</a> 
                 </div>
@@ -43,9 +43,9 @@
                 </div>
             </div>
 
-            <div id="contact-right"></div> -->
+            <div id="contact-right"></div>
 
-        </div>
+        <!-- </div> -->
 
     </div>
 
