Overall work completed, still need a bit of formatting and to put my own style on things

--- a/contact.html
+++ b/contact.html
@@ -8,42 +8,63 @@
 </head>
 
 <body>
-  <!-- the top layer of the website -->
-  <div class="header">
+     <!-- the top layer of the website -->
+     <div class="header">
 
-        <div class="left-logo-area"> 
-  
-        </div>
-  
-        <div class="main-logo">
-            <div class="main-logo-text">Steven Parramore</div>
+        <div id="left-logo-area"></div>
+
+        <div id="main-logo">
+            <div id="main-logo-text">Steven Parramore</div>
         </div>  
-  
-        <div class="right-logo-area">
-  
+
+        <div id="right-logo-area"></div>
+
+        <div id="header-link-area">
+
+            <div id="header-link-top"> </div>
+
+            <div id="about-link">
+                <div id="about-link-text">
+                    <a href="index.html">About</a> 
+                </div>
+            </div>
+
+            <div id="portfolio">
+                <div id="portfolio-text">
+                    <a href="portfolio.html">Portfolio</a> 
+                </div>
+            </div>
+
+            <div id="contact">
+                <div id="contact-text">
+                    <a href="contact.html">Contact</a> 
+                </div>
+            </div>
+
+            <div id="contact-right"></div>
+
         </div>
-  
-        <div class="about-link">
-          <div class="about-link-text">
-              <a href="index.html">About</a> 
-          </div>
-        </div>
-  
-        <div class="portfolio">
-          <div class="portfolio-text">
-              <a href="portfolio.html">Portfolio</a> 
-          </div>
-        </div>
-  
-        <div class="contact">
-          <div class="contact-text">
-              <a href="contact.html">Contact</a> 
-          </div>
-        </div>
-  
-        <div class="contact-right">
-  
-        </div>
-  
+
+    </div>
+
+    <div id="contact-body">
+      <div id="main-body-header">
+        <div id="main-body-header-text-left-border"></div>
+        <div id="main-body-header-text"> Contact </div>
       </div>
+      
+      <div id="contact-body-main">
+        <div id="contact-body-main-text-name">Name</div>
+        <textarea id="contact-body-main-textbox-name"></textarea>
+
+        <div id="contact-body-main-text-email">Email</div>
+        <textarea id="contact-body-main-textbox-email"></textarea>
+
+        <div id="contact-body-main-text-message">Message</div>
+        <textarea id="contact-body-main-textbox-message"></textarea>
+
+        <button id="contact-body-submit">Submit</button>
+      </div>
+    </div>
+
 </body>
