--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <!-- the top layer of the website -->
     <div class="header">
 
-            <div class="left-logo-area"> 
-
-            </div>
+        <div id="left-logo-area"></div>
 
         <div id="main-logo">
             <div id="main-logo-text">Steven Parramore</div>
@@ -23,7 +21,9 @@
 
         <div id="right-logo-area"></div>
 
-        <!-- <div id="header-link-area"> -->
+        <div id="header-link-area">
+
+            <div id="header-link-top"> </div>
 
             <div id="about-link">
                 <div id="about-link-text">
@@ -45,7 +45,7 @@
 
             <div id="contact-right"></div>
 
-        <!-- </div> -->
+        </div>
 
     </div>
 
