--- a/portfolio.html
+++ b/portfolio.html
@@ -9,41 +9,81 @@
 
 <body>
   <!-- the top layer of the website -->
-  <div class="header">
+     <!-- the top layer of the website -->
+     <div class="header">
 
-        <div class="left-logo-area"> 
-  
-        </div>
-  
-        <div class="main-logo">
-            <div class="main-logo-text">Steven Parramore</div>
+        <div id="left-logo-area"></div>
+
+        <div id="main-logo">
+            <div id="main-logo-text">Steven Parramore</div>
         </div>  
-  
-        <div class="right-logo-area">
-  
+
+        <div id="right-logo-area"></div>
+
+        <div id="header-link-area">
+
+            <div id="header-link-top"> </div>
+
+            <div id="about-link">
+                <div id="about-link-text">
+                    <a href="index.html">About</a> 
+                </div>
+            </div>
+
+            <div id="portfolio">
+                <div id="portfolio-text">
+                    <a href="portfolio.html">Portfolio</a> 
+                </div>
+            </div>
+
+            <div id="contact">
+                <div id="contact-text">
+                    <a href="contact.html">Contact</a> 
+                </div>
+            </div>
+
+            <div id="contact-right"></div>
+
         </div>
-  
-        <div class="about-link">
-          <div class="about-link-text">
-              <a href="index.html">About</a> 
-          </div>
+
+    </div>
+
+    <!-- the main body of portfolio -->
+
+    <div id="main-portfolio-body">
+
+      <div id="main-body-header">
+        <div id="main-body-header-text-left-border"></div>
+        <div id="main-body-header-text"> Portfolio </div>
+      </div>     
+
+      <div id="main-portfolio-body-body">
+        <div id="main-portfolio-body-body-picture1">
+          <img src="images/maxresdefault.jpg" alt:"Me!" class="portfolio-picture"></img>
+          <div class="portfolio-picture-text">Hangman</div>
         </div>
-  
-        <div class="portfolio">
-          <div class="portfolio-text">
-              <a href="portfolio.html">Portfolio</a> 
-          </div>
+
+        <div id="main-portfolio-body-body-picture2">
+            <img src="images/maxresdefault.jpg" alt:"Me!" class="portfolio-picture"></img>
+            <div class="portfolio-picture-text">RPG Game</div>
         </div>
-  
-        <div class="contact">
-          <div class="contact-text">
-              <a href="contact.html">Contact</a> 
-          </div>
+
+        <div id="main-portfolio-body-body-picture3">
+            <img src="images/maxresdefault.jpg" alt:"Me!" class="portfolio-picture"></img>
+            <div class="portfolio-picture-text">Trivia Game</div>
         </div>
-  
-        <div class="contact-right">
-  
+
+        <div id="main-portfolio-body-body-picture4">
+            <img src="images/maxresdefault.jpg" alt:"Me!" class="portfolio-picture"></img>
+            <div class="portfolio-picture-text">Rutgers Info Widget</div>
         </div>
-  
+
+        <div id="main-portfolio-body-body-picture5">
+            <img src="images/maxresdefault.jpg" alt:"Me!" class="portfolio-picture"></img>
+            <div class="portfolio-picture-text">Rock Paper Scissors</div>
+        </div>
+
       </div>
+
+    </div>
 </body>
