Personalized the page a bit more and added more photos

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,8 @@
 
 <body>
      <!-- the top layer of the website -->
-     <div class="header">
+     <div id="main-body-background"></div>
+     <div id="header">
 
         <div id="left-logo-area"></div>
 
