--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
 
+    <div id="main-body-background"></div>
     <!-- the top layer of the website -->
-    <div class="header">
+    <div id="header">
 
         <div id="left-logo-area"></div>
 
@@ -52,6 +53,9 @@
 
     <!-- the description portion of the website -->
     <div id="main-body">
+
+        <!-- <img src="images/vaio_hard_edge.png" id="main-body-background"></div> -->        
+
         <div id="main-body-header">
             <div id="main-body-header-text-left-border"></div>
             <div id="main-body-header-text"> About Me </div>
@@ -62,12 +66,18 @@
             <div id="main-body-left-border"></div>
             
             <div id="main-body-image">
-                <img src="images/maxresdefault.jpg" alt:"Me!" id="profile-picture"></img>
+                <img src="images/me.jpg" alt:"Me!" id="profile-picture"></img>
             </div>
 
 
             <div id="main-text">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                    <p>I've been a software engineer for about 12 years. I started off in a submarine simulation laboratory working for the navy doing radar and fathometer simulations. After that I began to do air traffic control simulations using that companies proprietary voice recognition software.</p>
+
+                    <p>After a brief stint running a local deli, I managed to get a position as a front end developer working at EA. I worked on NBA Live 16 and then worked on Madden 17 as a stress test engineer. I also worked overnight in support of Battlefield 1 making sure that the tests the team in Hyderabad India were running while they got some sleep. This was probably the most fun project for me, as I got to monitor test cases while playing the Open Beta at the same time.</p>
+
+                    <p>My contract eventually expired and I began my job search again. I've interviewed a lot of companies including Daybreak Games, Magic Leap and even Disney. During this time I've had to take on jobs in the service industry. I'm now working at Spatz in Winter Park.</p>
+
+                    <p>I'm still currently looking for a position in the tech field and I've decided to do this coding boot camp as a way for me to learn some new skills and refresh old ones. I'm excited to be coding again as I've missed it and I look forward to all the future projects I get to be involved in!</p>
             </div>
 
         </div>
