--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
 
 <body>
   <!-- the top layer of the website -->
-     <!-- the top layer of the website -->
-     <div class="header">
+     <div id="main-body-background"></div>
+     <div id="header">
 
         <div id="left-logo-area"></div>
 
@@ -59,27 +59,27 @@
 
       <div id="main-portfolio-body-body">
         <div id="main-portfolio-body-body-picture1">
-          <img src="images/maxresdefault.jpg" alt:"Me!" class="portfolio-picture"></img>
+          <img src="images/hangman.jpg" alt:"Me!" class="portfolio-picture"></img>
           <div class="portfolio-picture-text">Hangman</div>
         </div>
 
         <div id="main-portfolio-body-body-picture2">
-            <img src="images/maxresdefault.jpg" alt:"Me!" class="portfolio-picture"></img>
+            <img src="images/dice.jpg" alt:"Me!" class="portfolio-picture"></img>
             <div class="portfolio-picture-text">RPG Game</div>
         </div>
 
         <div id="main-portfolio-body-body-picture3">
-            <img src="images/maxresdefault.jpg" alt:"Me!" class="portfolio-picture"></img>
+            <img src="images/trivia.jpg" alt:"Me!" class="portfolio-picture"></img>
             <div class="portfolio-picture-text">Trivia Game</div>
         </div>
 
         <div id="main-portfolio-body-body-picture4">
-            <img src="images/maxresdefault.jpg" alt:"Me!" class="portfolio-picture"></img>
+            <img src="images/widget.png" alt:"Me!" class="portfolio-picture"></img>
             <div class="portfolio-picture-text">Rutgers Info Widget</div>
         </div>
 
         <div id="main-portfolio-body-body-picture5">
-            <img src="images/maxresdefault.jpg" alt:"Me!" class="portfolio-picture"></img>
+            <img src="images/rps.jpg" alt:"Me!" class="portfolio-picture"></img>
             <div class="portfolio-picture-text">Rock Paper Scissors</div>
         </div>
 
